# polandball

./: CMakeLists.txt  Config.h.in
assets/backgrounds/: sunny.asset
assets/blocks/: kazakhstan.asset
assets/cursors/: aim.asset
assets/items/: pack_armor.asset  pack_health.asset  pack_primary_ammo.asset  pack_secondary_ammo.asset
assets/players/: turkey.asset
assets/ui/: border_weapon.asset  cursor_aim.asset  shield_armor.asset  shield_health.asset  slot_empty.asset
assets/weapons/: ak74.asset  beretta92.asset  knife.asset  m1911.asset  m4a1.asset  wrench.asset
shaders/: default.shader  geometry_output.shader  overlay_output.shader  trace.shader
src/: ArgumentParser.cpp  ArgumentParser.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Entity.cpp  Entity.h  Game.cpp  Game.h  IMovable.h  INonCopyable.h  IReplicable.h  IRotatable.h  IScalable.h  ITransformable.h  Logger.cpp  Logger.h  Player.cpp  Player.h  PolandBall.cpp  PolandBall.h  RenderEffect.cpp  RenderEffect.h  ResourceCache.cpp  ResourceCache.h  ResourceManager.cpp  ResourceManager.h  ShaderLoader.cpp  ShaderLoader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  main.cpp
src/common/: INonCopyable.h  IRotatable.h  IScalable.h  ITransformable.h  Movable.h  NonCopyable.h  Rotatable.h  Scalable.h  Transformable.h
src/game/: BaseEntity.cpp  BaseEntity.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Label.cpp  Label.h  LineEntity.cpp  LineEntity.h  Pack.cpp  Pack.h  Player.cpp  Player.h  Replicable.cpp  Replicable.h  Scene.cpp  Scene.h  Shearable.cpp  Shearable.h  ShotTrace.cpp  ShotTrace.h  SpriteEntity.cpp  SpriteEntity.h  TextLabel.cpp  TextLabel.h  Weapon.cpp  Weapon.h  Widget.cpp  Widget.h
src/math/: Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Quaternion.cpp  Quaternion.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/opengl/: Line.cpp  Line.h  Primitive.cpp  Primitive.h  RenderEffect.cpp  RenderEffect.h  ShaderLoader.cpp  ShaderLoader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
src/signals/: Signals.cpp  Signals.h
src/utils/: ArgumentParser.cpp  ArgumentParser.h  Logger.cpp  Logger.h  ResourceCache.cpp  ResourceCache.h  ResourceManager.cpp  ResourceManager.h  ShaderLoader.cpp  ShaderLoader.h
textures/backgrounds/: sunny.tga  sunny.xcf
textures/blocks/: kazakhstan.tga  kazakhstan.xcf
textures/items/: pack_armor.tga  pack_armor.xcf  pack_health.tga  pack_health.xcf  pack_primary_ammo.tga  pack_primary_ammo.xcf  pack_secondary_ammo.tga  pack_secondary_ammo.xcf
textures/players/: turkey.tga  turkey.xcf
textures/ui/: cursor_aim.tga  cursor_aim.xcf
textures/weapons/: ak74.tga  ak74.xcf  beretta92.tga  beretta92.xcf  knife.tga  knife.xcf  m1911.tga  m1911.xcf  m4a1.tga  m4a1.xcf  wrench.tga  wrench.xcf
